syntax = "proto3";

package logical_time;

message LamportClockUnit {
    uint64 lt = 1;
    uint32 proc_id = 2;
}
